# Vcreator

./: CMakeLists.txt  README.md  Vcreator.json.in  ide.h  vcreator.qrc  vcreator_global.h  vcreatorconstants.h  vcreatoreditor.cpp  vcreatoreditor.h  vcreatorhighlighter.cpp  vcreatorhighlighter.h  vcreatorindenter.cpp  vcreatorindenter.h  vcreatorlexer.cpp  vcreatorlexer.h  vcreatorplugin.cpp  vcreatorplugin.h  vcreatorproject.cpp  vcreatorproject.h  vcreatorsettings.cpp  vcreatorsettings.h
.github/workflows/: README.md  build_cmake.yml  build_cmake_next.yml
share/qtcreator/: CMakeLists.txt
share/qtcreator/templates/wizards/projects/vlang/: git.ignore  v.mod  wizard.json
